welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: ';' expected but ')' found.
	if (a <= 20 && a >= 10) ||  (b <= 20 && b >= 10)){
                                                        ^